fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1670,7 +1670,7 @@ section#s{
     border-bottom:none;
     border-right:none;
     border-left:none;
-    margin-bottom: 20%;
+    margin-bottom: 18%;
 }
 
 .s-logo{
